Add support for @LooselyConsistentValue